--- a/front/public/index.html
+++ b/front/public/index.html
@@ -26,6 +26,8 @@
       crossorigin="anonymous"
     />
 
+    <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Source+Sans+Pro&display=swap" rel="stylesheet">
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
