--- a/front/public/index.html
+++ b/front/public/index.html
@@ -26,7 +26,7 @@
       crossorigin="anonymous"
     />
 
-    <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Source+Sans+Pro&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Hind+Vadodara|Source+Sans+Pro&display=swap" rel="stylesheet">
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
